--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 workflows:
   buildAndTest:
     jobs:
-      - pipenv/build:
+      - pipenv/install:
           args: -d
       - pipenv/shell:
           args: python -m flake8
