--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,4 @@ workflows:
       - pipenv/shell:
           args: python -m flake8
           requires:
-            - pipenv/build
+            - pipenv/install
